Now prevents the extension from opening a new tab if on the tipidpc.com domain

--- a/manifest.json
+++ b/manifest.json
@@ -8,5 +8,6 @@
 		"default_icon": "icon.png",
 		"default_popup": "popup.html"
 	},
-	"author": "JP Caparas"
+	"author": "JP Caparas",
+	"permissions": ["tabs"]
 }
